# pdf_ocr

./: .gitignore  README.md  config.toml.example  main.py  pyproject.toml
src/: __init__.py  batch_runner.py  llm_extractor.py  pdf_processor.py
