[project]
name = "pdf-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.30.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
